--- a/nx-links.json
+++ b/nx-links.json
@@ -5,6 +5,6 @@
         }
     },
     "firmwares": {
-        "Firmware 14.1.1": "https://mega.nz/file/dZwzzCKT#LzuAFUKvUQIzw-LQ6rP77EVswGNsRUH5bDQVvVVAy84"
+        "Firmware 14.1.2": "https://mega.nz/file/dNdxABRB#Dn84rsQ6CAPFGyoz0_AH1xpzM6qsR0XrUlSIEEw8TjA"
     }
 }
