changed 14.1.2 fw archive

--- a/nx-links.json
+++ b/nx-links.json
@@ -5,6 +5,6 @@
         }
     },
     "firmwares": {
-        "Firmware 14.1.2": "https://mega.nz/file/dNdxABRB#Dn84rsQ6CAPFGyoz0_AH1xpzM6qsR0XrUlSIEEw8TjA"
+        "Firmware 14.1.2": "https://mega.nz/file/pF0RGKTQ#4PkGpOfF6FWvBTfqj3o9NXwozdqqXCQkyrjP7EvaszQ"
     }
 }
