--- a/nx-links.json
+++ b/nx-links.json
@@ -1,7 +1,7 @@
 {
     "cfws": {
         "Atmosphere": {
-            "Kefir 651": "https://github.com/rashevskyv/kefir/releases/download/651/kefir651.zip"
+            "Kefir 651f": "https://github.com/rashevskyv/kefir/releases/download/651f/kefir651f.zip"
         }
     },
     "firmwares": {
