--- a/nx-links.json
+++ b/nx-links.json
@@ -1,7 +1,7 @@
 {
     "cfws": {
         "Atmosphere": {
-            "Kefir 652": "https://github.com/rashevskyv/kefir/releases/download/652/kefir652.zip"
+            "Switch Bros. 110": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/1.1.0/SwitchBros_BasisPaket.zip"
         }
     },
     "firmwares": {
