--- a/nx-links.json
+++ b/nx-links.json
@@ -5,6 +5,6 @@
         }
     },
     "firmwares": {
-        "Firmware 14.1.2": "https://mega.nz/file/pF0RGKTQ#4PkGpOfF6FWvBTfqj3o9NXwozdqqXCQkyrjP7EvaszQ"
+        "Firmware 15.0.0": "https://mega.nz/file/tV5TRIiS#4poFRNnZOwpKsNd-3vvxlYRr1VX0sx-pcTL--agBG4Y"
     }
 }
