--- a/nx-links.json
+++ b/nx-links.json
@@ -5,6 +5,6 @@
         }
     },
     "firmwares": {
-        "Firmware 15.0.0": "https://mega.nz/file/tV5TRIiS#4poFRNnZOwpKsNd-3vvxlYRr1VX0sx-pcTL--agBG4Y"
+        "Firmware 15.0.1": "https://mega.nz/file/RO52WDjB#5u57gNfLxbTeZ4IgjoOdY-ynCpGJEw8FY1pf_J7oJLU"
     }
 }
