--- a/nx-links.json
+++ b/nx-links.json
@@ -5,6 +5,6 @@
         }
     },
     "firmwares": {
-        "Firmware 15.0.1": "https://mega.nz/file/RO52WDjB#5u57gNfLxbTeZ4IgjoOdY-ynCpGJEw8FY1pf_J7oJLU"
+        "Firmware 15.0.1": "https://mega.nz/file/8JwUQK6R#CpNCgmtQrjpNgem6Omo51qDEYw7MhrNF7jcZSNmprRo"
     }
 }
