--- a/nx-links.json
+++ b/nx-links.json
@@ -1,30 +1,10 @@
 {
-    "bootloaders": {
-        "hekate_ctcaer_5.9.0_Nyx_1.4.0.zip": "https://github.com/CTCaer/hekate/releases/download/v5.9.0/hekate_ctcaer_5.9.0_Nyx_1.4.0.zip"
-    },
     "cfws": {
         "Atmosphere": {
-            "SwitchBros-O-sphere 1.4.0 -09c05e8f2": "https://github.com/Switch-Bros/SwitchBros-O-sphere/releases/download/1.4.0/SwitchBros-O-sphere-1.4.0-master-09c05e8f2+hbl-2.4.3+hbmenu-3.5.1.zip"
-        },
-        "DeepSea": {
-            "SwitchBros_BasisPaket.zip": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/1.1.0/SwitchBros_BasisPaket.zip",
-			"SwitchBros_DatenPaket.zip": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/1.1.0/SwitchBros_DatenPaket.zip",
-			"SwitchBros_ThemeAppsPaket.zip": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/1.1.0/SwitchBros_ThemeAppsPaket.zip",
-			"SwitchBros_LAN-PlayPaket.zip": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/1.1.0/SwitchBros_LAN-PlayPaket.zip",
-        }
-    },
-    "hekate": {
-        "hekate_ctcaer_5.9.0_Nyx_1.4.0.zip": "https://github.com/CTCaer/hekate/releases/download/v5.9.0/hekate_ctcaer_5.9.0_Nyx_1.4.0.zip"
-    },
-    "payloads": {
-		"fusee.bin": "https://github.com/Switch-Bros/SwitchBros-O-sphere/releases/download/1.4.0/fusee.bin",
-		"Lockpick_RCM.bin": "https://github.com/Switch-Bros/Lockpick_RCM/releases/download/1.9.9/Lockpick_RCM.bin",
-		"TegraExplorer.bin": "https://github.com/Switch-Bros/TegraExplorer/releases/download/4.1.0/TegraExplorer.bin"
-    },
+            "SwitchBros 110": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/110/SwitchBros_BasisPaket.zip"
+		}
+	},
     "firmwares": {
         "Firmware 15.0.1": "https://mega.nz/file/8JwUQK6R#CpNCgmtQrjpNgem6Omo51qDEYw7MhrNF7jcZSNmprRo"
-    },
-    "hekate_ipl": {
-        "hekate_ipl.ini": "https://github.com/Switch-Bros/nx-links/blob/master/resources/hekate_ipl.ini"
     }
 }
