--- a/nx-links.json
+++ b/nx-links.json
@@ -1,7 +1,7 @@
 {
     "cfws": {
         "Atmosphere": {
-            "SwitchBros 110": "https://github.com/Switch-Bros/Switch-Bros.-Pack/releases/download/110/SwitchBros_BasisPaket.zip"
+            "SwitchBros 111": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/111/SwitchBros_BasisPaket.zip"
 		}
 	},
     "firmwares": {
