--- a/nx-links.json
+++ b/nx-links.json
@@ -2,6 +2,7 @@
     "cfws": {
         "Atmosphere": {
             "SwitchBros 111": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/111/SwitchBros_BasisPaket.zip"
+			"SwitchBros BETA": https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/112-pre/SwitchBros_BasisPaket.zip
 		}
 	},
     "firmwares": {
