--- a/nx-links.json
+++ b/nx-links.json
@@ -2,12 +2,10 @@
     "cfws": {
         "Atmosphere": {
             "SwitchBros_Paket 113": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/113/SwitchBros_BasisPaket.zip"
-		}
-	},
-    "Firmwares": {        
-        "Firmware 15.0.1 (Rebootless Update)": "https://mega.nz/file/Id5jyRTB#PulAyz8IcSyiR-s6KYb-TwG719YxmxpzvO4utrEMaIs",
-        "Firmware 15.0.1 (Rebootless Update, langsamer Download)": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1%20%28Rebootless%20Update%29.zip",
-	"Firmware 15.0.1": "https://mega.nz/file/8JwUQK6R#CpNCgmtQrjpNgem6Omo51qDEYw7MhrNF7jcZSNmprRo",
-        "Firmware 15.0.1 (langsamer Download)": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1.zip"
+        }
+    },
+    "firmwares": {
+        "Firmware 15.0.1 (Rebootless Update von mega.nz)": "https://mega.nz/file/Id5jyRTB#PulAyz8IcSyiR-s6KYb-TwG719YxmxpzvO4utrEMaIs",
+        "Firmware 15.0.1 (Rebootless Update, langsamer Download": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1%20%28Rebootless%20Update%29.zip",
     }
 }
