--- a/nx-links.json
+++ b/nx-links.json
@@ -6,6 +6,6 @@
     },
     "firmwares": {
         "Firmware 15.0.1 (Rebootless Update von mega.nz)": "https://mega.nz/file/Id5jyRTB#PulAyz8IcSyiR-s6KYb-TwG719YxmxpzvO4utrEMaIs",
-        "Firmware 15.0.1 (Rebootless Update, langsamer Download": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1%20%28Rebootless%20Update%29.zip"
+        "Firmware 15.0.1 (Rebootless Update, langsamer Download)": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1%20%28Rebootless%20Update%29.zip"
     }
 }
