--- a/nx-links.json
+++ b/nx-links.json
@@ -5,7 +5,7 @@
         }
     },
     "firmwares": {
-        "Firmware 15.0.1 (mega.nz - schneller Download)": "https://mega.nz/file/Id5jyRTB#PulAyz8IcSyiR-s6KYb-TwG719YxmxpzvO4utrEMaIs",
-        "Firmware 15.0.1 (archive.org - langsamer Download)": "https://archive.org/download/nintendo-switch-global-firmwares/Firmware%2015.0.1%20%28Rebootless%20Update%29.zip"
+        "Firmware 16.0.0 (Nicht Empholen)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
+        "Firmware 15.0.1": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/15.0.1/Firmware_15.0.1.zip"
     }
 }
