--- a/nx-links.json
+++ b/nx-links.json
@@ -5,7 +5,7 @@
         }
     },
     "firmwares": {
-        "Firmware 16.0.0 (Nicht Empholen)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
+        "Firmware 16.0.0 (Nicht Empfohlen)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
         "Firmware 15.0.1": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/15.0.1/Firmware_15.0.1.zip"
     }
 }
