--- a/nx-links.json
+++ b/nx-links.json
@@ -1,11 +1,11 @@
 {
     "cfws": {
         "Atmosphere": {
-            "SwitchBros_Paket 113": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/113/SwitchBros_BasisPaket.zip"
+            "SwitchBros_Paket 114": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/114/SwitchBros_BasisPaket.zip"
         }
     },
     "firmwares": {
-        "Firmware 16.0.0 (Nicht Empfohlen)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
+        "Firmware 16.0.0": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
         "Firmware 15.0.1": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/15.0.1/Firmware_15.0.1.zip"
     }
 }
