--- a/nx-links.json
+++ b/nx-links.json
@@ -2,7 +2,7 @@
     "cfws": {
         "Atmosphere": {
             "SwitchBros_Paket 114": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/114/SwitchBros_BasisPaket.zip",
-            "SwitchBros_Paket test": "https://github.com/Switch-Bros/nx-links/releases/download/1/SwitchBros_BasisPaket.zip"
+            "SwitchBros_Paket Dev-Test": "https://github.com/Switch-Bros/nx-links/releases/download/1/SwitchBros_BasisPaket.zip"
         }
     },
     "firmwares": {
