--- a/nx-links.json
+++ b/nx-links.json
@@ -4,7 +4,7 @@
             "SwitchBros_Paket 114": "https://github.com/Switch-Bros/SwitchBros_BasisPaket/releases/download/114/SwitchBros_BasisPaket.zip"
         }
     },
-      "hekate": {
+      "bootloaders": {
         "SwitchBros_Paket Dev-Test": "https://github.com/Switch-Bros/nx-links/releases/download/1/SwitchBros_BasisPaket.zip"
     },
     "firmwares": {
