--- a/nx-links.json
+++ b/nx-links.json
@@ -5,11 +5,9 @@
         }
     },
     "bootloaders": {
-        "SwitchBros_Paket Dev-Test": "https://github.com/Switch-Bros/nx-links/releases/download/1/SwitchBros_BasisPaket.zip"
-    },
-    "hekate_ipl": {
+        "SwitchBros_Paket Dev-Test": "https://github.com/Switch-Bros/nx-links/releases/download/1/SwitchBros_BasisPaket.zip", 
         "SwitchBros_Android Dev-Paket (Build 20230317)": "https://github.com/TTghostsemir/Switch-Lineage/releases/download/20230317/lineage-18.1-20230317.zip"
-    },    
+    },
     "firmwares": {
         "Firmware 16.0.0": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
         "Firmware 15.0.1": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/15.0.1/Firmware_15.0.1.zip"
