--- a/nx-links.json
+++ b/nx-links.json
@@ -10,10 +10,6 @@
     },
     "firmwares": {
         "Firmware 16.0.1 (schnellste GitHub.com)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.1/Firmware_16.0.1.zip",
-        "Firmware 16.0.1 (schnell mega.nz)": "https://mega.nz/file/dJh1HBTB#X8FWDuwRCQ4xjDufZI1kPNPVWD2CkAzCTVT_w4LN3pc",
-        "Firmware 16.0.0 (schnellste GitHub.com)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/16.0.0/Firmware_16.0.0.zip",
-        "Firmware 16.0.0 (schnell mega.nz)": "https://mega.nz/file/IB5SyYYJ#ZES4plxEGqLzsN2sX8spGF0KGhqcNWvh6VxY2WQIlIQ",
-        "Firmware 15.0.1 (schnellste GitHub.com)": "https://github.com/Switch-Bros/Switch-Firmware/releases/download/15.0.1/Firmware_15.0.1.zip",
-        "Firmware 15.0.1 (schnell mega.nz)": "https://mega.nz/file/Id5jyRTB#PulAyz8IcSyiR-s6KYb-TwG719YxmxpzvO4utrEMaIs"
+        "Firmware 16.0.1 (schnell mega.nz)": "https://mega.nz/file/dJh1HBTB#X8FWDuwRCQ4xjDufZI1kPNPVWD2CkAzCTVT_w4LN3pc"
     }
 }
